--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "bootstrap": "4.5.2",
+    "bootstrap-social": "5.1.1",
+    "font-awesome": "4.7.0",
+    "path-to-regexp": "^6.2.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-popper": "1.3.6",
+    "react-router-dom": "5.2.0",
     "react-scripts": "5.0.0",
     "reactstrap": "8.5.1",
     "typeface-lobster": "^1.1.13",
