--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "5.0.0",
     "reactstrap": "8.5.1",
     "redux": "4.0.5",
+    "redux-thunk": "2.3.0",
     "typeface-lobster": "^1.1.13",
     "typeface-open-sans": "^1.1.13",
     "web-vitals": "^2.1.0"
