--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "bootstrap-social": "5.1.1",
     "font-awesome": "4.7.0",
     "path-to-regexp": "^6.2.0",
+    "prop-types": "15.7.2",
     "react": "^18.0.0",
+    "react-animation-components": "3.0.0",
     "react-dom": "^18.0.0",
     "react-popper": "1.3.6",
     "react-redux": "7.2.0",
